syntax = "proto3";

package microservices;

option go_package = "./proto";

service YourService {
  rpc HandleMethod(YourRequest) returns (YourResponse) {}
}

message YourRequest {
  string name = 1;
}

message YourResponse {
  string message = 1;
}